# AITW_microstructures

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
birch_data_generation/: __init__.py  birch.py  clocks.py  fit_elipse.py  loggers.py  params.py  ray_cell.py
birch_data_generation/cli/: __init__.py  birch.py  main.py
examples/: example_birch.json  example_spruce.json
wood_microstructure/: BirchMicrostructure.pt  __init__.py  birch.py  clocks.py  distortion.py  fit_elipse.py  loggers.py  microstructure.py  params.py  ray_cells.py  spruce.py  surrogate.py  vessels.py
wood_microstructure/cli/: __init__.py  birch.py  generate.py  main.py  postproc.py  spruce.py
